criação da classe Consulta e FormConsultas: botão de registrar consulta